@@ -2,6 +2,8 @@
 Various utilities for running/importing a script
 """
 
+from __future__ import annotations
+
 import bdb
 import linecache
 import os
@@ -549,14 +551,13 @@ def RunTabNanny(filename):
     data = newout.getvalue()
     if data:
         try:
-            lineno = data.split()[1]
-            lineno = int(lineno)
+            lineno = int(data.split()[1])
             _JumpToPosition(filename, lineno)
             try:  # Try and display whitespace
                 GetActiveEditControl().SCISetViewWS(1)
             except:
                 pass
-            win32ui.SetStatusText("The TabNanny found trouble at line %d" % lineno)
+            win32ui.SetStatusText(f"The TabNanny found trouble at line {lineno}")
         except (IndexError, TypeError, ValueError):
             print("The tab nanny complained, but I can't see where!")
             print(data)
@@ -604,20 +605,19 @@ def JumpToDocument(fileName, lineno=0, col=1, nChars=0, bScrollToTop=0):
     return view
 
 
-def _HandlePythonFailure(what, syntaxErrorPathName=None):
+def _HandlePythonFailure(what: str, syntaxErrorPathName: str | None = None):
     typ, details, tb = sys.exc_info()
     if isinstance(details, SyntaxError):
+        filename = details.filename
+        if (not filename or filename == "<string>") and syntaxErrorPathName:
+            filename = syntaxErrorPathName
         try:
-            msg, (fileName, line, col, text) = details
-            if (not fileName or fileName == "<string>") and syntaxErrorPathName:
-                fileName = syntaxErrorPathName
-            _JumpToPosition(fileName, line, col)
+            _JumpToPosition(filename, details.lineno, details.offset)
         except (TypeError, ValueError):
-            msg = str(details)
-        win32ui.SetStatusText("Failed to " + what + " - syntax error - %s" % msg)
+            pass
     else:
         traceback.print_exc()
-        win32ui.SetStatusText("Failed to " + what + " - " + str(details))
+    win32ui.SetStatusText(f"Failed to {what} - {type(details)} - {details}")
     tb = None  # Clean up a cycle.
 
 
